Fix navigation on mobile

--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -2,7 +2,6 @@
 
 .container {
    font-size: clamp(.8rem, 1vw, 1rem);
-   height: 30em;
    width: 100%;
    position: absolute;
    bottom: 0;
@@ -12,7 +11,7 @@
       display: flex;
       justify-content: center;
       gap: $gap;
-      margin-top: 2em;
+      margin-bottom: 10rem;
       transform: translateY(50%) scale(0.85);
       transition: transform 500ms $cubic-bezier;
       overflow: auto;
@@ -102,42 +101,36 @@
 }
 
 @media screen and (max-width: 110rem) {
-   .container {
-      .links {
-         justify-content: start;
-         padding-inline: 4em;
-      }
+   .container .links {
+      justify-content: start;
+      padding-inline: 4em;
    }
 }
 
 @media screen and (max-width: 64rem) {
-   .container {
-      height: 30rem;
+   .container .links {
+      justify-content: center;
+      padding-inline: 0;
 
-      .links {
-         justify-content: center;
-         padding-inline: 0;
+      .link {
+         .linkImage {
+            width: 12em;
+            aspect-ratio: 1.5 / 2.5;
 
-         .link {
-            .linkImage {
-               width: 12em;
-               aspect-ratio: 1.5 / 2.5;
+            &.home {
+               background: no-repeat center/cover url('../../img/navigation/home-mobile.png');
+            }
 
-               &.home {
-                  background: no-repeat center/cover url('../../img/navigation/home-mobile.png');
-               }
+            &.events {
+               background: no-repeat center/cover url('../../img/navigation/events-mobile.png');
+            }
 
-               &.events {
-                  background: no-repeat center/cover url('../../img/navigation/events-mobile.png');
-               }
+            &.about {
+               background: no-repeat center/cover url('../../img/navigation/about-mobile.png');
+            }
 
-               &.about {
-                  background: no-repeat center/cover url('../../img/navigation/about-mobile.png');
-               }
-
-               &.contact {
-                  background: no-repeat center/cover url('../../img/navigation/contact-mobile.png');
-               }
+            &.contact {
+               background: no-repeat center/cover url('../../img/navigation/contact-mobile.png');
             }
          }
       }
@@ -145,13 +138,8 @@
 }
 
 @media screen and (max-width: 48rem) {
-   .container {
-      height: 30rem;
-
-      .links {
-         justify-content: start;
-         margin-top: 2rem;
-         padding-inline: clamp(2em, 7vw, 4em);
-      }
+   .container .links {
+      justify-content: start;
+      padding-inline: clamp(2em, 7vw, 4em);
    }
 }
